--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "isomorphic-fetch": "^3.0.0",
     "keyv": "^4.0.3",
     "libsodium-wrappers": "^0.7.9",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "sodium": "^3.0.2"
   },
   "description": ""
 }
